--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Training</title>
+  <title>Stacie Fraser - Portfolio</title>
   <!-- meta -->
   <meta charset="utf-8" />
   <meta name="description" content="Personal Site">
@@ -12,6 +12,7 @@
   <!-- styles -->
   <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
   <!-- scripts -->
   <script type="text/javascript" src="assets/js/app.js"></script>
   <!-- favicon -->
@@ -20,6 +21,18 @@
 <body>
   <div id="page-wrapper">
     <h1>Stacie's Portfolio</h1>
+    <nav>
+		<a href=#>About Me</a>
+		<a href=#>Projects</a>
+		<a href=#>Skills</a>
+    </nav>	
+    <img src="assets/imgs/stacie_napa.jpg" href="stacie">
+	
+	<aside>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis illum placeat mollitia quia velit, at vitae repellendus doloremque ducimus iusto, tempora nostrum deserunt, eligendi totam eius ad aperiam recusandae.</p>
+	</aside>
+	
+
   </div>
 </body>
 </html>
