--- a/index.html
+++ b/index.html
@@ -14,25 +14,32 @@
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
   <!-- scripts -->
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/main.js"></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
 </head>
-<body>
-  <div id="page-wrapper">
-    <h1>Stacie's Portfolio</h1>
+<header>
     <nav>
-		<a href=#>About Me</a>
-		<a href=#>Projects</a>
-		<a href=#>Skills</a>
-    </nav>	
-    <img src="assets/imgs/stacie_napa.jpg" href="stacie">
-	
-	<aside>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis illum placeat mollitia quia velit, at vitae repellendus doloremque ducimus iusto, tempora nostrum deserunt, eligendi totam eius ad aperiam recusandae.</p>
-	</aside>
-	
+    <a href=#>About Me</a>
+    <a href=#>Projects</a>
+    <a href=#>Skills</a>
+    <a href=#>Contact Me</a>
+    </nav>  
+    <h1>Stacie's Portfolio</h1>
+	</header>
 
+  <div id="page-wrapper">
+  <body>
+	<div class='about'>
+    <h2>About Me</h2>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis illum placeat mollitia quia velit, at vitae repellendus doloremque ducimus iusto, tempora nostrum deserunt, eligendi totam eius ad aperiam recusandae.</p>
+   </div>
+   <div class='projects'>
+    <h2>Projects</h2>
+  </div>
+   <div class='skills'>
+    <h2>Skills</h2>
+  </div>
   </div>
 </body>
 </html>
