updated skills and project sections

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 </header>
 <div id="page-wrapper">
 
-    <body>
-        <section id="about" class="about">
+  <body>
+    <section id="about" class="about">
             <div class="container aboutMe">
                 <div class="row">
                     <div class="col-md-6 essay">
                         <h2>Hi, I'm Stacie</h2>
-                        <h4>Future Web Developer</h4>
+                        <h4>Full-Stack Software Engineer</h4>
                         <p> Growing up in the San Francisco Bay Area, I was fortunate to be immersed in the possibilities of technology and watch it shape our world and future. Although technology has always been something I was interested in, I decided to go to college for a degree in English Literature, as I also love to read. </p>
                         <p>After college, I spent some years working in the corporate world trying to decide how to best live my life. It wasn’t until 2017 that I decided to take a part-time Front End Web Development course at General Assembly. I learned HTML, CSS, JQuery, and Javascript. Although learning these languages were enough to become a web designer, it didn’t quench my desire of understanding the Internet from all angles. It was there that I realized my passion to create and learn, and thus my journey into web development begun.</p>
                         <p>I am currently enrolled in General Assembly’s full-time web development immersive course. Here, I am gaining an even deeper understanding of Javascript and will also learn other languages like React and Ruby on Rails. By the end of this course, I will be ready to shape our world and future.
@@ -56,51 +56,90 @@
                     <button class="btn btn-outline-secondary">Download Resume</button>
                 </div>
             </div>
-        </section>
-        <div class='skills'>
-            <h2 id="skills" class='title'>Skills</h2>
-            <div class="skillBox">
-                    <div class="circle">
-                            <span class="span1">HTML
-                            </span>
-                            <span class="altSpan">Bootstrap
-                            </span>
+    </section>
+    <section id="skills">
+            <div class='skills container'>
+                <h2 class='title'>Skills</h2>
+                <div class="skillBox">
+                        <div class="circle">
+                                <span class="span1">HTML
+                                </span>
+                                <span class="altSpan">AJAX
+                                </span>
 
-                    </div>
-                    <div class="circle">
-                            <span class="span2">CSS
-                            </span>
-                            <span class="altSpan">AJAX
-                            </span>
-                    </div>                    
-                    <div class="circle">
-                            <span class="span3 misc">jQuery
-                            </span>
-                            <span class="altSpan">Node
-                            </span>
-                    </div>
-                    <div class="circle">
-                            <span class="span4">Ruby
-                            </span>
-                            <span class="altSpan">React
-                            </span>
-                    </div>
-                    <div class="circle">
-                            <span class="span5">JavaScript
-                            </span>
-                            <span class="altSpan">Git/Github
-                            </span>
-                  </div>
-                  </span>
+                        </div>
+                        <div class="circle">
+                                <span class="span2">CSS
+                                </span>
+                                <span class="altSpan">Bootstrap
+                                </span>
+                        </div>                    
+                        <div class="circle">
+                                <span class="span3">JavaScript
+                                </span>
+                                <span class="altSpan">jQuery
+                                </span>
+                        </div>
+                        <div class="circle">
+                                <span class="span4">Ruby
+                                </span>
+                                <span class="altSpan">Git/Github
+                                </span>
+                        </div>
+                        <div class="circle">
+                                <span class="span5">React
+                                </span>
+                                <span class="altSpan">AngularJS
+                                </span>
+                        </div>
+                         <div class="circle">
+                                <span class="span6">Node.js
+                                </span>
+                                <span class="altSpan">Express
+                                </span>            
+                        </div>
+                         <div class="circle">
+                                <span class="span7">MongoDB
+                                </span>
+                                <span class="altSpan">Mongoose
+                                </span>
+                         </div>
+                </div>
             </div>
-        </div>
-
-        <div id="projects">
+    </section>
+    <section id="projects">
+      <div class="container">
             <h2 class="title">Projects</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim perferendis illum placeat mollitia quia velit, at vitae repellendus doloremque ducimus iusto, tempora nostrum deserunt, eligendi totam eius ad aperiam recusandae.</p>
-        </div>
-</div>
-</body>
+                <!-- bootstrap cards here -->
+      <div class='row'>
+        <div class="col-md-3 card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+      </div>
+      <div class="col-md-3 card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+      </div>
+      <div class="col-md-3 card" style="width: 18rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+       </div>
+       <div class="col-md-3 card" style="width: 18rem;">
+           <img class="card-img-top" src="..." alt="Card image cap">
+           <div class="card-body">
+               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+           </div>
+       </div>
+     </div>
+    </section>
+  </body>
 
 <div class="footer">
 <footer>
@@ -112,4 +151,3 @@
 
 </html>
 
-<!-- <div class="col-sm-2"><i class="fas fa-circle circle2"></i>CSS</div> -->
