--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
 <div class="footer">
 <footer>
+    <a>staciemfraser@gmail.com</a>
     <a href="https://www.linkedin.com/in/staciefraser/">Linkedin</a>
     <a href="https://github.com/stacief510">GitHub</a>
     <a href="https://www.instagram.com/stacief510/">Instagram</a>
