added 1 project card

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="about" class="about">
             <div class="container aboutMe">
                 <div class="row">
-                    <div class="col-md-6 essay">
+                    <div class="col-lg-6 essay">
                         <h2>Hi, I'm Stacie</h2>
                         <h4>Full-Stack Software Engineer</h4>
                         <p> Growing up in the San Francisco Bay Area, I was fortunate to be immersed in the possibilities of technology and watch it shape our world and future. Although technology has always been something I was interested in, I decided to go to college for a degree in English Literature, as I also love to read. </p>
@@ -48,7 +48,7 @@
                         <p>I am currently enrolled in General Assembly’s full-time web development immersive course. Here, I am gaining an even deeper understanding of Javascript and will also learn other languages like React and Ruby on Rails. By the end of this course, I will be ready to shape our world and future.
                         </p>
                     </div>
-                    <div id="selfie" class="col-md-6"> 
+                    <div id="selfie" class="col-lg-6"> 
                         <img src="assets/imgs/Stacie2018Spring1.jpg" alt="StacieSelfie"/>
                     </div>
                 </div>
@@ -114,9 +114,9 @@
                 <!-- bootstrap cards here -->
       <div class='row'>
         <div class="col-md-3 card" style="width: 18rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+          <img class="card-img-top" src="assets/imgs/penguinslide.png" alt="Card image cap">
           <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Race your penguin across the ice!</p>
           </div>
       </div>
       <div class="col-md-3 card" style="width: 18rem;">
